--- a/.config/i3/config
+++ b/.config/i3/config
@@ -173,6 +173,8 @@ bindsym $mod+r mode "resize"
 #        status_command i3status
 #}
 
+exec_always xrandr --output HDMI-2 --off --output HDMI-1 --off --output DP-1 --off --output eDP-1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output DP-2 --off
+
 # Executing startup applications
 exec nm-applet &
 exec devmon &
