Dumping some files

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -181,7 +181,7 @@ exec devmon &
 exec dropbox &
 # exec gpmdp &
 # exec spotify &
-exec slack &
+# exec slack &
 exec redshift-gtk &
 exec solaar &
 exec blueman-applet &
