--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,12 @@
 [user]
 	name = spatel13
 	email = sahil.patel2461@gmail.com
+
 [credential]
 	helper = cache --timeout=3600
+
 [core]
+	excludesfile = /home/spatel13/.gitignore_global
 	pager = diff-so-fancy | less --tabs=4 -RFX
 
 [color]
