--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-.code_profiles/*/extensions/*
-.code_profiles/*/data/*
-!.code_profiles/*/data/User/settings.json
+.code_profiles/*
+!.code_profiles/extensions*.txt
+!.code_profiles/settings*.json
